--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
