--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-api-query",
-  "version": "2.0.0-next.1",
+  "version": "2.0.0-next.3",
   "description": "Hooks to use react-query with a typed API client.",
   "keywords": [
     "react-query",
@@ -10,6 +10,7 @@
   "license": "MIT",
   "author": "Felix Gnass <fgnass@gmail.com>",
   "repository": "fgnass/react-api-query",
+  "type": "module",
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
