--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2019",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "lib": ["ESNext"],
     "skipLibCheck": true,
     "esModuleInterop": true,
