--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "main": "lib/index.js",
   "types": "./lib/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.0",
