--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.0",
